test/spec_vectors/i32/fail/module_46.wat
(module (func $type-binary-2nd-operand-empty-in-local.tee (local i32) (local.tee 0 (i32.const 0) (i32.add)) (drop)))